test/syc/bad/gotoundef.c
/*
 * Go to undefined label
 */

int undef_lbl(void)
{
	goto undefined;
}
